# hyperoptax

./: .editorconfig  pyproject.toml
hyperoptax/: base.py  params.py  types.py
hyperoptax/models/: acquisition_fns.py  gp.py  kernels.py
scripts/: test_gp.py
