[project]
name = "hyperoptax"
version = "0.1.0"
description = "Black-box optimisers in JAX for Hyperparameter Optimisation mainly."
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "flax>=0.8.5",
    "jax[cuda12]>=0.4.30",
    "jaxtyping>=0.2.36",
    "wandb>=0.18.7",
]
