[project]
name = "hyperoptax"
version = "0.1.0"
description = "Black-box optimisers in JAX for Hyperparameter Optimisation mainly."
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "flax>=0.8.5",
    "jaxtyping>=0.2.36",
    "wandb>=0.18.7",
]

[project.optional-dependencies]
cpu = ["jax>=0.4.35"]
metal = ["jax>=0.4.26", "jax-metal>=0.1.0; sys_platform == 'darwin'"]
cuda12 = ["jax[cuda12]>=0.4.35"]
tpu = ["jax[tpu]>=0.4.35"]

[tool.uv]
prerelease = "allow"
find-links = ["https://storage.googleapis.com/jax-releases/libtpu_releases.html"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "metal" },
    { extra = "cuda12" },
    { extra = "tpu" },
  ],
]
